<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ControlActivity" 
    android:orientation="vertical"        >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/appversiontext"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
 
	    <Spinner
	        android:id="@+id/choosetargetapp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal" />
	    
	    <Button
	        android:id="@+id/appcontrollerparameters"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/appcontrollerparameters" />
	    
	    <Button
	        android:id="@+id/targetappparameters"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/targetappparameters" />
	    
	    <TextView
	        android:id="@+id/configfiletext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:text="@string/configurationfiletext" />
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:orientation="horizontal" >
		    <EditText
		        android:id="@+id/configfileinput"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:hint="@string/configurationinputhint" />

	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:orientation="horizontal" >
		    <Button
		        android:id="@+id/browsefile"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/browsefile" />
		    		    
		    		    
		    <Button
		        android:id="@+id/loadconfigurationfile"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="20dp"	        
		        android:text="@string/loadconfigurationfile" />
		    
		    <Button
		        android:id="@+id/saveconfigurationfile"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="20dp"
		        android:text="@string/saveconfigurationfile" />

	    </LinearLayout>
	
	    <Button
	        android:id="@+id/launchcontrol"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
		    android:layout_marginTop="30dp"
	        android:text="@string/launchcontrol" />
    
    </LinearLayout>

    <TextView
        android:id="@+id/appversiontext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Version" />

</RelativeLayout>